Scrollbar Bug Fixed

--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 body{
     background-color: rgba(255, 255, 255, 0.815);
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 html{
-    overflow: visible;
     scroll-behavior: smooth;
 }
 
